Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
       table.table-demo-source th:first-child { border-right: 2px solid black; }
       #result {  width: 100% !important; }
     </style>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1GQ5T2K7YV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-1GQ5T2K7YV');
+    </script>
+    
     <title>Online crosstab to list converter</title>
   </head>
   <body>
